High contrast chart fixes

--- a/_sass/layouts/_goal.scss
+++ b/_sass/layouts/_goal.scss
@@ -16,6 +16,7 @@ body.contrast-high {
 
       span.status.notstarted{
         color: white !important;
+        border: 1px solid white !important;
       }
     }
   }
